Fixed Home Page z-index

--- a/src/app/components/home-desktop/home-desktop.component.css
+++ b/src/app/components/home-desktop/home-desktop.component.css
@@ -16,6 +16,7 @@
     width: 79.1%;
     right:0;
     top:0;
+    z-index: -1;
 }
 
 #blurb{
